--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-runner",
+  "name": "prettier-runner",
   "version": "0.0.1",
-  "description": "ESLint runner for Jest",
+  "description": "Prettier runner for Jest",
   "main": "src/index.js",
   "repository": "https://github.com/rogeliog/eslint-runner",
   "author": "Rogelio Guzman <rogelioguzmanh@gmail.com>",
